[package]
authors = ["Connie Hilarides <conni_h@outlook.com>"]
name = "connies-rpg-game"
version = "0.1.0"

[dependencies]
backtrace = "0.3.2"
cgmath = "0.15.0"
conniecs = "0.1.0"
conniecs-derive = "0.1.0"
glium = "0.17.0"
glutin = "0.9.2"
image = "0.15.0"
lazy_static = "0.2.8"
msgbox = "0.1.0"
serde = "1.0.11"
serde_derive = "1.0.11"
tiled = "0.7.0"
time = "0.1.38"
toml = "0.4.5"
windows_dpi = "0.1.4"
winit = "0.7.5"
wrapped2d = "0.3.4"

[profile]

[profile.release]
debug = 1
