[package]
authors = ["Connie Hilarides <conni_h@outlook.com>"]
name = "connies-rpg-game"
version = "0.1.0"

[dependencies]
backtrace = "0.3.2"
cgmath = "0.15.0"
clippy = "0.0.168"
conniecs-derive = "0.1.2"
fnv = "1.0.5"
glium = "0.17.0"
glutin = "0.9.2"
image = "0.15.0"
index-pool = "1.0.5"
lazy_static = "0.2.8"
log = "0.3.8"
serde = "1.0.11"
serde_derive = "1.0.11"
tiled = "0.7.0"
time = "0.1.38"
toml = "0.4.5"
windows_dpi = "0.1.4"
winit = "0.7.5"
wrapped2d = "0.3.4"

[dependencies.conniecs]
version = "0.1.2"

[dependencies.fmod-studio]
git = "https://github.com/Connicpu/fmod-studio-rs"

[dependencies.msgbox]
git = "https://github.com/bekker/msgbox-rs"
[profile.release]
debug = 1
